Fix alignement.

--- a/assets/sass/components/ads/_googlesitekit-ads-woocommerce-redirect-modal.scss
+++ b/assets/sass/components/ads/_googlesitekit-ads-woocommerce-redirect-modal.scss
@@ -56,7 +56,12 @@
 		}
 
 		.mdc-dialog__actions {
+			gap: 5px;
 			justify-content: center;
+
+			@media (min-width: 880px) {
+				gap: 10px;
+			}
 
 			@media (min-width: $bp-desktop) {
 				justify-content: flex-end;
@@ -70,12 +75,6 @@
 			}
 
 			button {
-
-				&:last-child {
-					@media (max-width: $bp-mobileOnly) {
-						margin-top: 5px;
-					}
-				}
 
 				.MuiCircularProgress-colorPrimary {
 					color: $c-white;
